fix gxfscatalogservice tests